# campaigner

./: .gitignore  AGENTS.md  MIGRATION-PROMPT.md  MIGRATION_CHECKLIST.md  PLAN.md  PLAN_EXECUTION.md  PLAN_LOCALIZATION.md  PROJECT_TREE.md  README.md  package-lock.json  package.json  start.bat  testbed.md  tsconfig.json
src-tauri/: Cargo.toml  build-frontend.mjs  dev-frontend.mjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 000_init.sql  001_tags.sql  002_projects.sql  003_branch_foundation.sql  004_tag_associations.sql  005_notes.sql  006_timeline.sql  007_characters.sql  008_factions.sql  009_dogmas.sql  010_ambitions.sql  011_character_traits.sql  012_political_scales.sql  013_graph_layouts.sql  014_dynasties.sql  015_maps.sql  016_wiki_links.sql
src-tauri/src/: asset_protocol.rs  error.rs  lib.rs  main.rs  paths.rs  specta.rs
src-tauri/src/commands/: ambitions.rs  app.rs  branches.rs  character_traits.rs  characters.rs  dogmas.rs  dynasties.rs  factions.rs  graph_layouts.rs  legacy_migration.rs  maps.rs  mod.rs  notes.rs  political_scales.rs  project_io.rs  projects.rs  search.rs  tags.rs  timeline.rs  uploads.rs  wiki.rs
src-tauri/src/db/: connection.rs  legacy_migration.rs  migrations.rs  mod.rs
src-tauri/src/models/: ambition.rs  app.rs  branch.rs  character.rs  character_trait.rs  dogma.rs  dynasty.rs  faction.rs  graph_layout.rs  legacy_migration.rs  map.rs  mod.rs  note.rs  political_scale.rs  project.rs  project_io.rs  search.rs  tag.rs  tag_association.rs  timeline.rs  upload.rs  wiki_link.rs
src-tauri/src/services/: mod.rs  (+3 more)
(+565 files in other folders)
